RIA-6817 - added fortify scan on nightly build (#376)