@@ -183,6 +183,12 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
 
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 project.ext {
   pacticipant = 'bail_caseApi'
   pacticipantVersion = getCheckedOutGitCommitHash()
@@ -345,6 +351,8 @@ dependencies {
   contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.3.2')
 
   testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.6.28'
+
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
 
   testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
